--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@eslint/js": "^9.12.0",
     "@stylistic/eslint-plugin": "^2.9.0",
     "@types/chrome": "^0.0.277",
+    "@types/dom-chromium-ai": "^0.0.2",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^2.2.0",
